--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+header {
+  height: 100px;
+  background-color: rgb(128, 68, 0);
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+
+main {
+  flex: 1;
+  display: flex;
+}
+
+footer {
+  height: 100px;
+  background-color: rgb(128, 68, 0);
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  place-items: unset;
+}
+
+#root{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
